# protei-test

./: CMakeLists.txt
client/: CMakeLists.txt  client.cpp  client.h  main.cpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.h
server/private/: p_server.cpp  p_server.h  p_server_tcp.cpp  p_server_udp.cpp
